css/_menu.scss
@use 'global' as *;
@use 'top-menu';
@use 'primary-menu';

.main-navigation .menu-bar-item>a.button{
    color: white;
}

/* Hide the logo in the primary menu */
@media (min-width: $tabletwidth){
	#masthead .site-logo{
		display: none;
	}
}

/* Underline red */
/* text color of active menu*/
li[class*="current-menu-"] > a
{
    color: #bd2919;;
}

li:hover > a,
li[class*="current-menu-"] > a {
    text-decoration: underline;
    text-decoration-color: currentcolor;
    -webkit-text-decoration-color: #bd2919;
    text-decoration-color: #bd2919;
}

/* Color the search image*/
.icon-search{
    svg{
        color: black;
    }

    &:hover svg{
        color: #bd2919;
    }
}

/* background of submenus*/
ul .menu-item-has-children ul.sub-menu {
    background-color: white;
}
	
/* hover color of submenu*/
.menu-item-has-children ul.sub-menu .menu-item:hover a{
    background-color: lightgrey;
}
		
/*Number behind menu item*/
.numberCircle {
    border-radius: 50%;
    width: 30px;
    height: 30px;
    padding: 3px;
    background: #bd2919;
    color: white;
    text-align: center;
    font: 10px Arial, sans-serif;
}

.has-inline-mobile-toggle .inside-header{
    padding:0px;
}

/* background of submenus*/
@media (min-width: 768px){
	.search-form.navigation-search.nav-search-active{
		right: 100px;
	}

    .navigation-search.nav-search-active{
        top: 70px;
        z-index: 10001;
        padding: 0 50px;
    }
}

@media (max-width: 768px) {
    .navigation-search.nav-search-active {
        position: relative;
        order: 20;
    }
}

#site-navigation #ajaxsearchlite1 .probox .proinput input, div.asl_w .probox .proinput:focus{
    outline: none;
}

